--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,14 @@
 /* font-family: 'Open Sans', sans-serif;
 font-family: 'Raleway', sans-serif; */
 
+body {
+  font-family: Open Sans, sans-serif;
+  font-size: 18px;
+  line-height: 1.7;
+  letter-spacing: 0.02em;
+  color: #555555;
+}
+
 .section {
   padding-top: 130px;
   padding-bottom: 130px;
@@ -14,4 +22,42 @@ font-family: 'Raleway', sans-serif; */
   margin-right: auto;
   margin-left: auto;
   background-color: tomato;
+}
+
+.uppertitle {
+  font-family: Open Sans, sans-serif;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #303030;
+}
+
+.title {
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 0.17;
+  letter-spacing: 0.05em;
+  color: #303030;
+}
+
+.subtitle {
+  font-family: Open Sans, sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.7;
+  letter-spacing: 0.02em;
+  color: #555555;
+}
+
+.main-btn {
+  font-family: Open Sans, sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: #ffffff;
 }
